// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createWorkTimesMocks Genehmigte und beantragte 1`] = `
Array [
  Array [
    Object {
      "clocking": false,
      "date": "2020-03-24",
      "duration": 17903,
      "id": 0,
      "intervals": Array [
        Object {
          "timeSince": "2020-03-24T15:24:20.000Z",
          "timeUntil": "2020-03-24T16:25:46.000Z",
        },
        Object {
          "timeSince": "2020-03-24T17:28:08.000Z",
          "timeUntil": "2020-03-24T17:43:43.000Z",
        },
        Object {
          "timeSince": "2020-03-24T18:43:19.000Z",
          "timeUntil": "2020-03-24T22:24:41.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
    Object {
      "clocking": false,
      "date": "2020-03-24",
      "duration": 12772,
      "id": 1,
      "intervals": Array [
        Object {
          "timeSince": "2020-03-24T12:05:31.000Z",
          "timeUntil": "2020-03-24T13:03:41.000Z",
        },
        Object {
          "timeSince": "2020-03-24T15:35:44.000Z",
          "timeUntil": "2020-03-24T18:10:26.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-04-14",
      "duration": 13547,
      "id": 2,
      "intervals": Array [
        Object {
          "timeSince": "2020-04-14T13:50:29.000Z",
          "timeUntil": "2020-04-14T14:13:14.000Z",
        },
        Object {
          "timeSince": "2020-04-14T14:39:21.000Z",
          "timeUntil": "2020-04-14T14:43:25.000Z",
        },
        Object {
          "timeSince": "2020-04-14T16:25:38.000Z",
          "timeUntil": "2020-04-14T19:44:36.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
    Object {
      "clocking": false,
      "date": "2020-04-14",
      "duration": 28176,
      "id": 3,
      "intervals": Array [
        Object {
          "timeSince": "2020-04-14T10:25:10.000Z",
          "timeUntil": "2020-04-14T11:46:26.000Z",
        },
        Object {
          "timeSince": "2020-04-14T16:09:25.000Z",
          "timeUntil": "2020-04-14T22:37:45.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-06-05",
      "duration": 18016,
      "id": 4,
      "intervals": Array [
        Object {
          "timeSince": "2020-06-05T14:53:25.000Z",
          "timeUntil": "2020-06-05T19:53:41.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
    Object {
      "clocking": false,
      "date": "2020-06-05",
      "duration": 17805,
      "id": 5,
      "intervals": Array [
        Object {
          "timeSince": "2020-06-05T13:19:29.000Z",
          "timeUntil": "2020-06-05T13:31:26.000Z",
        },
        Object {
          "timeSince": "2020-06-05T15:40:51.000Z",
          "timeUntil": "2020-06-05T16:29:59.000Z",
        },
        Object {
          "timeSince": "2020-06-05T16:30:27.000Z",
          "timeUntil": "2020-06-05T17:45:07.000Z",
        },
        Object {
          "timeSince": "2020-06-05T18:34:06.000Z",
          "timeUntil": "2020-06-05T21:15:06.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-09-11",
      "duration": 24587,
      "id": 6,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-11T13:32:26.000Z",
          "timeUntil": "2020-09-11T14:00:18.000Z",
        },
        Object {
          "timeSince": "2020-09-11T14:25:41.000Z",
          "timeUntil": "2020-09-11T20:47:36.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
    Object {
      "clocking": false,
      "date": "2020-09-11",
      "duration": 22511,
      "id": 7,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-11T11:18:45.000Z",
          "timeUntil": "2020-09-11T13:35:50.000Z",
        },
        Object {
          "timeSince": "2020-09-11T16:27:40.000Z",
          "timeUntil": "2020-09-11T16:50:10.000Z",
        },
        Object {
          "timeSince": "2020-09-11T18:16:40.000Z",
          "timeUntil": "2020-09-11T21:52:16.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-09-17",
      "duration": 12985,
      "id": 8,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-17T11:31:53.000Z",
          "timeUntil": "2020-09-17T12:37:55.000Z",
        },
        Object {
          "timeSince": "2020-09-17T13:09:45.000Z",
          "timeUntil": "2020-09-17T13:10:11.000Z",
        },
        Object {
          "timeSince": "2020-09-17T16:34:12.000Z",
          "timeUntil": "2020-09-17T16:35:18.000Z",
        },
        Object {
          "timeSince": "2020-09-17T17:30:09.000Z",
          "timeUntil": "2020-09-17T19:59:00.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
    Object {
      "clocking": false,
      "date": "2020-09-17",
      "duration": 40071,
      "id": 9,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-17T10:13:18.000Z",
          "timeUntil": "2020-09-17T11:19:30.000Z",
        },
        Object {
          "timeSince": "2020-09-17T12:23:21.000Z",
          "timeUntil": "2020-09-17T18:54:33.000Z",
        },
        Object {
          "timeSince": "2020-09-17T19:21:23.000Z",
          "timeUntil": "2020-09-17T22:51:50.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
]
`;

exports[`createWorkTimesMocks Nur beantragte 1`] = `
Array [
  Array [
    Object {
      "clocking": false,
      "date": "2020-03-24",
      "duration": 17903,
      "id": 0,
      "intervals": Array [
        Object {
          "timeSince": "2020-03-24T15:24:20.000Z",
          "timeUntil": "2020-03-24T16:25:46.000Z",
        },
        Object {
          "timeSince": "2020-03-24T17:28:08.000Z",
          "timeUntil": "2020-03-24T17:43:43.000Z",
        },
        Object {
          "timeSince": "2020-03-24T18:43:19.000Z",
          "timeUntil": "2020-03-24T22:24:41.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-04-14",
      "duration": 12772,
      "id": 1,
      "intervals": Array [
        Object {
          "timeSince": "2020-04-14T12:05:31.000Z",
          "timeUntil": "2020-04-14T13:03:41.000Z",
        },
        Object {
          "timeSince": "2020-04-14T15:35:44.000Z",
          "timeUntil": "2020-04-14T18:10:26.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-06-05",
      "duration": 13547,
      "id": 2,
      "intervals": Array [
        Object {
          "timeSince": "2020-06-05T13:50:29.000Z",
          "timeUntil": "2020-06-05T14:13:14.000Z",
        },
        Object {
          "timeSince": "2020-06-05T14:39:21.000Z",
          "timeUntil": "2020-06-05T14:43:25.000Z",
        },
        Object {
          "timeSince": "2020-06-05T16:25:38.000Z",
          "timeUntil": "2020-06-05T19:44:36.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-09-11",
      "duration": 28176,
      "id": 3,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-11T10:25:10.000Z",
          "timeUntil": "2020-09-11T11:46:26.000Z",
        },
        Object {
          "timeSince": "2020-09-11T16:09:25.000Z",
          "timeUntil": "2020-09-11T22:37:45.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-09-17",
      "duration": 18016,
      "id": 4,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-17T14:53:25.000Z",
          "timeUntil": "2020-09-17T19:53:41.000Z",
        },
      ],
      "status": 1,
      "usersId": 0,
    },
  ],
]
`;

exports[`createWorkTimesMocks Nur genehmigte 1`] = `
Array [
  Array [
    Object {
      "clocking": false,
      "date": "2020-03-24",
      "duration": 17903,
      "id": 0,
      "intervals": Array [
        Object {
          "timeSince": "2020-03-24T15:24:20.000Z",
          "timeUntil": "2020-03-24T16:25:46.000Z",
        },
        Object {
          "timeSince": "2020-03-24T17:28:08.000Z",
          "timeUntil": "2020-03-24T17:43:43.000Z",
        },
        Object {
          "timeSince": "2020-03-24T18:43:19.000Z",
          "timeUntil": "2020-03-24T22:24:41.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-04-14",
      "duration": 12772,
      "id": 1,
      "intervals": Array [
        Object {
          "timeSince": "2020-04-14T12:05:31.000Z",
          "timeUntil": "2020-04-14T13:03:41.000Z",
        },
        Object {
          "timeSince": "2020-04-14T15:35:44.000Z",
          "timeUntil": "2020-04-14T18:10:26.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-06-05",
      "duration": 13547,
      "id": 2,
      "intervals": Array [
        Object {
          "timeSince": "2020-06-05T13:50:29.000Z",
          "timeUntil": "2020-06-05T14:13:14.000Z",
        },
        Object {
          "timeSince": "2020-06-05T14:39:21.000Z",
          "timeUntil": "2020-06-05T14:43:25.000Z",
        },
        Object {
          "timeSince": "2020-06-05T16:25:38.000Z",
          "timeUntil": "2020-06-05T19:44:36.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-09-11",
      "duration": 28176,
      "id": 3,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-11T10:25:10.000Z",
          "timeUntil": "2020-09-11T11:46:26.000Z",
        },
        Object {
          "timeSince": "2020-09-11T16:09:25.000Z",
          "timeUntil": "2020-09-11T22:37:45.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
  ],
  Array [
    Object {
      "clocking": false,
      "date": "2020-09-17",
      "duration": 18016,
      "id": 4,
      "intervals": Array [
        Object {
          "timeSince": "2020-09-17T14:53:25.000Z",
          "timeUntil": "2020-09-17T19:53:41.000Z",
        },
      ],
      "status": 2,
      "usersId": 0,
    },
  ],
]
`;
